Billing address addded to payment page dynamic is not yet done

--- a/public/assets/css/accountDetails.css
+++ b/public/assets/css/accountDetails.css
@@ -1,7 +1,7 @@
 /*====Account Details code start====*/
 .account_detailssection {
-    padding: 60px 0px;
-    background: #eeeffc;
+    /* padding: 60px 0px;
+    background: #eeeffc; */
 }
 
 .account_detailssection .account_box {
