--- a/public/assets/css/misc.css
+++ b/public/assets/css/misc.css
@@ -219,3 +219,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.PhoneInputInput {
+    border:none
+}
