--- a/public/assets/css/accountDetails.css
+++ b/public/assets/css/accountDetails.css
@@ -156,3 +156,81 @@
 .account_box .adressDetails {
     padding-top: 12px;
 }
+
+/* ------------- */
+
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
+
+.otp-wrapper {
+    /* background-color: deepskyblue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 100vh; */
+    text-align: center;
+    font-family: "Lato", sans-serif;
+    margin: 40px 0;
+}
+
+.otp-wrapper .otp-box {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 40vw;
+    min-width: 350px;
+    /* height: 80vh; */
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    padding: 24px 0px;
+}
+
+.otp-wrapper svg {
+    margin: 16px 0;
+    width: auto;
+}
+
+.otp-wrapper .title {
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Lato", sans-serif;
+}
+
+.otp-wrapper p {
+    color: #a3a3a3;
+    font-size: 14px;
+    width: 200px;
+    margin-top: 4px;
+    margin-bottom: 20px;
+    font-family: "Lato", sans-serif;
+}
+
+.otp-wrapper input {
+    /* width: 32px; */
+    height: 32px;
+    text-align: center;
+    border: none;
+    border-bottom: 1.5px solid #d2d2d2;
+    margin: 0 10px;
+    background-color: transparent;
+    color: #000;
+}
+
+.otp-wrapper input:focus {
+    border-bottom: 1.5px solid deepskyblue;
+    outline: none;
+}
+
+.otp-wrapper button {
+    width: 250px;
+    letter-spacing: 2px;
+    margin-top: 24px;
+    padding: 12px 16px;
+    border-radius: 8px;
+    border: none;
+    background-color: #33cdff;
+    color: white;
+    cursor: pointer;
+}
