--- a/public/assets/css/packages.css
+++ b/public/assets/css/packages.css
@@ -475,7 +475,7 @@
 }
 
 .trusted_partnersection .content_wraper {
-    background: #f9f6ff;
+    background: #ffffff;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     display: flex;
     flex-wrap: wrap;
@@ -591,5 +591,11 @@
     -webkit-text-fill-color: transparent;
     transition: 1s;
 }
+
+
+.pricing_section .elements-item ul li {
+    
+}
+
 
 /*===End===*/
