--- a/public/assets/css/checkout.css
+++ b/public/assets/css/checkout.css
@@ -131,9 +131,9 @@
 
 /* Price Breakup */
 .priceBreakup h5 {
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-family: var(--sub-para);
-    font-weight: 400;
+    font-weight: 500;
     font-size: 16px;
 }
 
