--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -37,6 +37,89 @@
     color: #000;
     font-family: Roboto;
 }
+
+.header .wrapper li a:hover {
+     color: #ef7592;
+
+}
 .header .mobile_showcta{
     display: none;
+}
+
+
+.mobile-menu-dropdown {
+    position: fixed;
+    top: 60px; 
+    left: 0;
+    width: 100%;
+    background: linear-gradient(135deg, #e75a95, #ffa78c);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    z-index: 1000; 
+    display: none; 
+    flex-direction: column; 
+    padding: 20px;
+  }
+
+  .mobile-menu-dropdown.active{
+    display: flex;
+}
+
+.mobile-menu-dropdown ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  
+}
+
+
+.mobile-menu-dropdown ul li:hover {
+
+  background-color: #f3c3b438;
+  cursor: pointer;
+  }
+  
+.mobile-menu-dropdown ul li {
+  margin: 15px;
+  border: 1px solid;
+  border-color: #ffa78c;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.mobile-menu-dropdown ul li a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 20px;
+  
+}
+
+
+.wrapper-mobile i{
+    font-size: 30px;
+    background-color: #fff;
+    border-radius: 50px;
+    height: 33px;
+    width: 33px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
+
+.menubar i{
+    box-shadow: rgb(123 121 121 / 25%) 0px -1px 11px, rgb(255 255 255 / 22%) 0px 10px 10px;    height: 35px;
+    width: 35px;    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+.wrapper-mobile .display-side
+{
+    /* display: flex; */
+    justify-content: center;
+    align-items: normal;
 }
