--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -65,32 +65,57 @@
 
 .services .wrapper {
     position: relative;
-    height: 340px;
+    /* height: 340px; */
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 5px;
 }
+
 
 .services .wrapper .serviceBackground {
-    border-radius: 30px;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    background: linear-gradient(135deg, #d41f9c, #ffa78c);
+ 
 }
 
+.main .industries .content h1{
+    background: linear-gradient(135deg, #d41f9c, #ffa78c);
+    max-block-size: -webkit-fill-available;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+
 .services .wrapper .serviceContent {
+  
+}
+
+.services .wrapper .serviceContents-test {
     background-color: #fff;
-    position: relative;
-    z-index: 1;
-    top: -10px;
-    left: -10px;
     border-radius: 30px;
     padding: 25px;
     transition: 0.3s;
-    height: 340px;
+    height: 250px !important;
 }
 
 .services .wrapper .serviceContent .iconWrapper {
     width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 15px;
+
+    background: -webkit-linear-gradient(top, #d41f9c 0%, #ffa78c 100%);
+    -webkit-background-clip: text;
+    background-clip: text !important;
+    -webkit-text-fill-color: transparent;
+}
+
+.services .wrapper .serviceContent .iconWrappers i {
+    font-size: 32px;
+}
+
+.services .wrapper .serviceContent .iconWrappers {
+    /* width: 40px; */
     height: 40px;
     display: flex;
     align-items: center;
@@ -203,11 +228,39 @@
 /* ---------------------- Industries --------------------- */
 .industries .tab-content .imgWrapper {
     width: 100%;
-    height: 500px;
+    /* height: 500px; */
     overflow: hidden;
     border-radius: 20px;
+    border: 4px solid #ffffff;
+    box-shadow: #a7f0ff40 0px 0px 20px 6px;
 }
 
+.main .images-point img {
+    width: 80%;
+    height: 80%;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-left: 10px;
+    border: 4px solid #ffffff;
+    box-shadow: #a7f0ff40 0px 0px 20px 6px;
+
+}
+.main .images-point img {
+    /* width:auto !important; */
+    height: 80%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 0px;
+    /* margin-left: 0px; */
+    border: 4px solid #ffffff;
+    box-shadow: #a7f0ff40 0px 0px 20px 6px;
+
+}
+
+
+main .images-positions{
+    margin-left: 15px !important;
+}
 .industries .tab-content .imgWrapper img {
     width: 100%;
     height: 100%;
@@ -263,14 +316,15 @@
 .swiper-button-prev,
 .swiper-button-next {
     border-radius: 50%;
-    background-color: #007bff30;
+    background: linear-gradient(135deg, #e75a95, #ffa78c);
     width: 45px !important;
     height: 45px !important;
+    color: white !important;
 }
 
 .swiper-button-prev:hover,
 .swiper-button-next:hover {
-    background-color: var(--main_color);
+    background: linear-gradient(135deg, #e75a95, #ffa78c);
 }
 
 .swiper-button-prev:hover::after,
@@ -282,3 +336,104 @@
 .swiper-button-next::after {
     font-size: 24px !important;
 }
+
+
+.miniServices .icons-contact  i{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    width: 30px;
+    border: 1px solid ;
+    border-color: #871fff;
+    background: #871fff;
+    color: white;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+
+.main .contact-form{
+    /* border: 1px solid ; */
+    background-color: #ffff;
+    padding: 41px;
+    border-radius: 20px;
+    box-shadow: rgb(0 0 0 / 0%) 0px 3px 8px;
+    background: linear-gradient(135deg, #d41f9c00, #ffa78c00);
+}
+
+
+
+.services .icon-phone {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    height: 285px;
+    min-height: 200px;
+    padding: 38px;
+    border-radius: 10px;
+   }
+.services .icon-phone i{
+    height: 50px;
+    width: 50px;
+    background: #4D6DDD;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    margin-bottom: 10px;
+
+}
+
+.services .icon-phone  .b i{
+    background: #FF5969;
+}
+.services .icon-phone  .c i{
+    background: #3578FF;
+}
+
+.services .icon-phone  .d i{
+    background: #19b44c;
+}
+
+.services .icon-phone  .e i{
+    background: #d85420;
+}
+
+.services .icon-phone  .d i{
+    background: #18b5c0;
+}
+
+
+
+.services .icon-phone p{
+ margin-bottom: 10px;
+font-size: 15px;
+}
+.main .services{
+    background-color: #ffff;
+    text-align: center;
+}
+
+
+.contact-form label{
+    font-size: 14px;
+    color: white;
+    font-weight: 700;
+}
+
+.contact-form .form-control:focus, .form-control {
+
+background-color: transparent;
+color: white;
+}
+
+
+
+.cardDetailsWrapper .tvlrFormField  .form-control .form-control:focus{
+
+color: black !important;
+
+    
+}
+
+
