--- a/public/assets/css/misc.css
+++ b/public/assets/css/misc.css
@@ -16,7 +16,7 @@
 }
 
 .nav-pills .nav-link:hover {
-    background-color: var(--main_color);
+    background: linear-gradient(135deg, #d41f9c, #ffa78c);
     color: #FFF;
 }
 
@@ -65,6 +65,7 @@
 }
 
 .cardDetailsWrapper{
+    background-color: #fff;
     align-items: center;
     justify-content: space-between;
     border: 1px solid #ddd;
@@ -74,6 +75,10 @@
     height: 100%;
 }
 
+
+.cardDetailsWrapper .travellerdetails{
+    color: black;
+}
 .thankyou_section {
     padding: 0px 0px;
     background: #eeeffc;
@@ -220,6 +225,9 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-.PhoneInputInput {
-    border:none
+.PhoneInputInput:focus-visible {
+ 
+border-color: #727272 !important;
+
+
 }
