--- a/public/assets/css/accountDetails.css
+++ b/public/assets/css/accountDetails.css
@@ -47,7 +47,7 @@
     padding-left: 8px;
     border: 1px solid #7ec9f4;
     border-radius: 5px;
-    margin: 0px 0px 0px 0px;
+    margin: 0px 0px 10px 0px;
     background-color: #fff;
     color: #000;
 }
@@ -170,6 +170,7 @@
     text-align: center;
     font-family: "Lato", sans-serif;
     margin: 40px 0;
+    padding-top: 40px;
 }
 
 .otp-wrapper .otp-box {
@@ -201,19 +202,19 @@
 .otp-wrapper p {
     color: #a3a3a3;
     font-size: 14px;
-    width: 200px;
+    width: 250px;
     margin-top: 4px;
     margin-bottom: 20px;
     font-family: "Lato", sans-serif;
 }
 
 .otp-wrapper input {
-    /* width: 32px; */
+    width: 32px;
     height: 32px;
     text-align: center;
     border: none;
     border-bottom: 1.5px solid #d2d2d2;
-    margin: 0 10px;
+    /* margin: 0 10px; */
     background-color: transparent;
     color: #000;
 }
