--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -4,7 +4,7 @@
     width: 100%;
     z-index: 9999;
     padding: 10px 10px;
-    background-color: #fff;
+    background-color: #ff36af;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
