css problem fix

--- a/public/assets/css/accountDetails.css
+++ b/public/assets/css/accountDetails.css
@@ -1,8 +1,8 @@
 /*====Account Details code start====*/
-.account_detailssection {
-    /* padding: 60px 0px;
-    background: #eeeffc; */
-}
+/* .account_detailssection {
+     padding: 60px 0px;
+    background: #eeeffc; 
+} */
 
 .account_detailssection .account_box {
     padding: 20px;
