--- a/public/assets/css/buttons.css
+++ b/public/assets/css/buttons.css
@@ -31,7 +31,8 @@
     margin: 10px auto 0 auto;
     cursor: pointer;
 }
-.serviceBtn i{
+
+.serviceBtn i {
     font-size: 28px;
     margin-right: 6px;
     color: #fff;
@@ -62,8 +63,9 @@
     background: linear-gradient(135deg, #e75a95, #ffa78c);
     position: absolute;
     z-index: -1;
-    top: 3px;
+    top: 50%;
     right: -29px;
+    transform: translateY(-50%);
     transition: 0.3s;
 }
 
@@ -73,8 +75,9 @@
     font-size: 16px;
     position: absolute;
     z-index: 0;
-    top: 12px;
+    top: 50%;
     right: -15px;
+    transform: translateY(-50%);
     color: #fff;
 }
 
@@ -86,7 +89,7 @@
     width: calc(100% + 40px);
 }
 
-.payNow{
+.payNow {
     width: 100%;
     height: 40px;
     display: flex;
@@ -115,15 +118,15 @@
     top: 0;
     transition-duration: .3s;
     mix-blend-mode: hard-light;
-  }
-  
-  .payNow:hover::before {
+}
+
+.payNow:hover::before {
     transition-duration: .3s;
-    transform: translate(100%,-50%);
+    transform: translate(100%, -50%);
     border-radius: 0;
-  }
-  
-  .payNow:active {
-    transform: translate(5px,5px);
+}
+
+.payNow:active {
+    transform: translate(5px, 5px);
     transition-duration: .3s;
-  }
+}
